; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_font_renderer/extr_freetype.c_font_renderer_ft_get_default_font.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_font_renderer/extr_freetype.c_font_renderer_ft_get_default_font.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@font_paths = common dso_local global i8** null, align 8
@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @font_renderer_ft_get_default_font to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @font_renderer_ft_get_default_font() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  store i64 0, i64* %2, align 8
  br label %3

3:                                                ; preds = %21, %0
  %4 = load i64, i64* %2, align 8
  %5 = load i8**, i8*** @font_paths, align 8
  %6 = call i64 @ARRAY_SIZE(i8** %5)
  %7 = icmp ult i64 %4, %6
  br i1 %7, label %8, label %24

8:                                                ; preds = %3
  %9 = load i8**, i8*** @font_paths, align 8
  %10 = load i64, i64* %2, align 8
  %11 = getelementptr inbounds i8*, i8** %9, i64 %10
  %12 = load i8*, i8** %11, align 8
  %13 = call i64 @path_is_valid(i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %8
  %16 = load i8**, i8*** @font_paths, align 8
  %17 = load i64, i64* %2, align 8
  %18 = getelementptr inbounds i8*, i8** %16, i64 %17
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %1, align 8
  br label %25

20:                                               ; preds = %8
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %2, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %2, align 8
  br label %3

24:                                               ; preds = %3
  store i8* null, i8** %1, align 8
  br label %25

25:                                               ; preds = %24, %15
  %26 = load i8*, i8** %1, align 8
  ret i8* %26
}

declare dso_local i64 @ARRAY_SIZE(i8**) #1

declare dso_local i64 @path_is_valid(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
